# so-tesina-messaggistica

./: .gitignore  CMakeLists.txt  README.md
client/: main.c
doc/: Tesina Sistemi Operativi.odt  matrix_proto_header.odg  matrix_stack.odg
lib/include/: darray.h  dir.h  file.h  log.h  matrix.h  mem.h  msg.h  net.h  proto.h  stack.h  sys.h  users.h  utils.h
lib/src/: darray.c  dir.c  file.c  log.c  mem.c  msg.c  net.c  proto.c  stack.c  sys.c  users.c
server/: main.c  request.c  request.h  threads.c  threads.h
